Added remark to starting slide

--- a/sections/1a. intro/slide-before-starting/slide.html
+++ b/sections/1a. intro/slide-before-starting/slide.html
@@ -38,6 +38,7 @@
 
     <div style="margin-top: 60px;">
         <p>Only tested for Chrome</p>
+        <p>A wifi connection is recommended, there are some big images and videos to load</p>
         <p class="subtitle">A resolution as close to 1920x1080 as possible gives the sharpest results</p>
     </div>
 
