Added code for the two data sketches projects because datasketch.es isn't https

--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
                 </section>
 
                 <!-- FINAL | Figures in the Sky -->
-                <section id="constellations-final" class="fig-container" data-file="http://www.datasketch.es/may/code/nadieh/" data-iframe data-preload></section>
-
+                <section id="constellations-final" class="fig-container" data-file="sections/2. figures/code/" data-iframe data-preload></section> <!-- "http://www.datasketch.es/may/code/nadieh/" -->
 
 
                 <!-- **************************************************** -->
@@ -170,7 +169,7 @@
                 </section>
 
                 <!-- FINAL | Royal constellations -->
-                <section id="royals-final" data-file="http://www.datasketch.es/october/code/nadieh/" class="fig-container" data-iframe data-iframe-black data-preload></section>
+                <section id="royals-final" data-file="sections/3. royals/code/" class="fig-container" data-iframe data-iframe-black data-preload></section> <!-- "http://www.datasketch.es/october/code/nadieh/" -->
 
 
 
